--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,9 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
