--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/BTT.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.flatlaf-3.4.1.jar=C:\\Users\\chris\\OneDrive\\Desktop\\BCIRS\\src\\xternalJars\\flatlaf-3.4.1.jar
 file.reference.rs2xml.jar=src\\xternaljar\\rs2xml.jar
 includes=**
 jar.compress=false
@@ -36,7 +37,8 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.rs2xml.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.flatlaf-3.4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
