--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.4.1.jar=C:\\Users\\chris\\OneDrive\\Desktop\\BCIRS\\src\\xternalJars\\flatlaf-3.4.1.jar
+file.reference.flatlaf-3.4.1.jar-1=src\\xternaljar\\flatlaf-3.4.1.jar
 file.reference.rs2xml.jar=src\\xternaljar\\rs2xml.jar
 includes=**
 jar.compress=false
@@ -38,7 +39,8 @@ javac.classpath=\
     ${file.reference.rs2xml.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.flatlaf-3.4.1.jar}
+    ${file.reference.flatlaf-3.4.1.jar}:\
+    ${file.reference.flatlaf-3.4.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
