--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ excludes=
 file.reference.flatlaf-3.4.1.jar=C:\\Users\\chris\\OneDrive\\Desktop\\BCIRS\\src\\xternalJars\\flatlaf-3.4.1.jar
 file.reference.flatlaf-3.4.1.jar-1=src\\xternaljar\\flatlaf-3.4.1.jar
 file.reference.itextpdf-5.5.9.jar=C:\\Users\\chris\\OneDrive\\Desktop\\BCIRS\\src\\xternalJars\\itextpdf-5.5.9.jar
+file.reference.itextpdf-5.5.9.jar-1=src\\xternaljar\\itextpdf-5.5.9.jar
 file.reference.rs2xml.jar=src\\xternaljar\\rs2xml.jar
 includes=**
 jar.compress=false
@@ -42,7 +43,8 @@ javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${file.reference.flatlaf-3.4.1.jar}:\
     ${file.reference.flatlaf-3.4.1.jar-1}:\
-    ${file.reference.itextpdf-5.5.9.jar}
+    ${file.reference.itextpdf-5.5.9.jar}:\
+    ${file.reference.itextpdf-5.5.9.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
