--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.flatlaf-3.4.1.jar=C:\\Users\\chris\\OneDrive\\Desktop\\BCIRS\\src
 file.reference.flatlaf-3.4.1.jar-1=src\\xternaljar\\flatlaf-3.4.1.jar
 file.reference.itextpdf-5.5.9.jar=C:\\Users\\chris\\OneDrive\\Desktop\\BCIRS\\src\\xternalJars\\itextpdf-5.5.9.jar
 file.reference.itextpdf-5.5.9.jar-1=src\\xternaljar\\itextpdf-5.5.9.jar
+file.reference.jfreechart-1.0.19-demo.jar=C:\\Users\\PC\\Documents\\jfreechart\\jfreechart-1.0.19\\jfreechart-1.0.19\\jfreechart-1.0.19-demo.jar
 file.reference.rs2xml.jar=src\\xternaljar\\rs2xml.jar
 includes=**
 jar.compress=false
@@ -44,7 +45,8 @@ javac.classpath=\
     ${file.reference.flatlaf-3.4.1.jar}:\
     ${file.reference.flatlaf-3.4.1.jar-1}:\
     ${file.reference.itextpdf-5.5.9.jar}:\
-    ${file.reference.itextpdf-5.5.9.jar-1}
+    ${file.reference.itextpdf-5.5.9.jar-1}:\
+    ${file.reference.jfreechart-1.0.19-demo.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
