--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,11 +30,20 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.4.1.jar=C:\\Users\\chris\\OneDrive\\Desktop\\BCIRS\\src\\xternalJars\\flatlaf-3.4.1.jar
-file.reference.flatlaf-3.4.1.jar-1=src\\xternaljar\\flatlaf-3.4.1.jar
-file.reference.itextpdf-5.5.9.jar=C:\\Users\\chris\\OneDrive\\Desktop\\BCIRS\\src\\xternalJars\\itextpdf-5.5.9.jar
 file.reference.itextpdf-5.5.9.jar-1=src\\xternaljar\\itextpdf-5.5.9.jar
+file.reference.jcalendar-1.4.jar=src\\xternaljar\\jcalendar-1.4.jar
 file.reference.jfreechart-1.0.19-demo.jar=C:\\Users\\PC\\Documents\\jfreechart\\jfreechart-1.0.19\\jfreechart-1.0.19\\jfreechart-1.0.19-demo.jar
+file.reference.junit-4.12.jar=src\\xternaljar\\junit-4.12.jar
+file.reference.log4j-1.2.17.jar=src\\xternaljar\\log4j-1.2.17.jar
+file.reference.poi-3.17.jar=src\\xternaljar\\poi-3.17.jar
+file.reference.poi-examples-3.17.jar=src\\xternaljar\\poi-examples-3.17.jar
+file.reference.poi-excelant-3.17.jar=src\\xternaljar\\poi-excelant-3.17.jar
+file.reference.poi-ooxml-3.17.jar=src\\xternaljar\\poi-ooxml-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar=src\\xternaljar\\poi-ooxml-schemas-3.17.jar
+file.reference.poi-scratchpad-3.17.jar=src\\xternaljar\\poi-scratchpad-3.17.jar
 file.reference.rs2xml.jar=src\\xternaljar\\rs2xml.jar
+file.reference.sqljdbc42.jar=src\\xternaljar\\sqljdbc42.jar
+file.reference.xmlbeans-2.6.0.jar=src\\xternaljar\\xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -43,10 +52,19 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.beans-binding.classpath}:\
     ${file.reference.flatlaf-3.4.1.jar}:\
-    ${file.reference.flatlaf-3.4.1.jar-1}:\
-    ${file.reference.itextpdf-5.5.9.jar}:\
     ${file.reference.itextpdf-5.5.9.jar-1}:\
-    ${file.reference.jfreechart-1.0.19-demo.jar}
+    ${file.reference.jfreechart-1.0.19-demo.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.poi-examples-3.17.jar}:\
+    ${file.reference.poi-excelant-3.17.jar}:\
+    ${file.reference.poi-ooxml-3.17.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar}:\
+    ${file.reference.poi-scratchpad-3.17.jar}:\
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
