--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.4.1.jar=C:\\Users\\chris\\OneDrive\\Desktop\\BCIRS\\src\\xternalJars\\flatlaf-3.4.1.jar
+file.reference.flatlaf-3.4.1.jar-1=src\\xternaljar\\flatlaf-3.4.1.jar
 file.reference.itextpdf-5.5.9.jar-1=src\\xternaljar\\itextpdf-5.5.9.jar
 file.reference.jcalendar-1.4.jar=src\\xternaljar\\jcalendar-1.4.jar
 file.reference.jfreechart-1.0.19-demo.jar=C:\\Users\\PC\\Documents\\jfreechart\\jfreechart-1.0.19\\jfreechart-1.0.19\\jfreechart-1.0.19-demo.jar
@@ -64,7 +65,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-schemas-3.17.jar}:\
     ${file.reference.poi-scratchpad-3.17.jar}:\
     ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.flatlaf-3.4.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
